* add push_back(vector) to deque.    * add initial test program for deque

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -28,6 +28,7 @@ LINTEL_SIMPLE_TEST(stringutil)
 LINTEL_SIMPLE_TEST(stats)
 LINTEL_SIMPLE_TEST(stats_quantile)
 LINTEL_SIMPLE_TEST(stats_sequence)
+LINTEL_SIMPLE_TEST(deque)
 
 ################################## SPECIAL TEST PROGRAMS
 
