* Add support for verifying that we achieve a global ordering over all of       the locks used in a program.
CMakeConfig.txt: Find the boost thread library stuff; explain what the perl
  stuff is used for.

AssertBoost.hpp: make what() throw nothing, add a save_what private variable
  so if we can make a more useful error message, we will.  Add TODO.

PThread.hpp.in: Add in the PThreadLockOrderingGroup class that (when
  used) qverifies all the locks have a total order.  Add
  PThreadScopedUnlock that does the reverse of a scoped lock.

AssertBoost.cpp: try to provide a better what() for the exception if we don't
  get any additional exceptions when doing so.  Fix coding convention.

src/CMakeLists.txt: LintelPThread depends on boost thread dlibrary

pthread.cpp: add a test for the ordering group code; verifies both
  correct and incorrect usage.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -138,7 +138,7 @@ IF(THREADS_ENABLED)
     ADD_DEPENDENCIES(LintelPThread Lintel)
     SET_TARGET_PROPERTIES(LintelPThread
         PROPERTIES VERSION ${LINTEL_VERSION} SONAME ${LINTEL_ABI_VERSION})
-    TARGET_LINK_LIBRARIES(LintelPThread Lintel ${CMAKE_THREAD_LIBS_INIT})
+    TARGET_LINK_LIBRARIES(LintelPThread Lintel ${BOOST_THREAD_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 ENDIF(THREADS_ENABLED)
 
 IF(LIBXML2_ENABLED)
