--- a/include/Lintel/PThread.hpp.in
+++ b/include/Lintel/PThread.hpp.in
@@ -15,6 +15,7 @@
 #include <string.h>
 
 #include <boost/utility.hpp>
+#include <boost/thread/tss.hpp>
 
 #include <Lintel/AssertBoost.hpp>
 #include <Lintel/Clock.hpp>
@@ -97,6 +98,7 @@ public:
 		  % strerror(ret));
 	++ncontention;
     }
+
     bool trylock() {
         int ret = pthread_mutex_trylock(&m);
         if (ret == 0) {
@@ -135,24 +137,116 @@ private:
     pthread_mutex_t m;
 };
 
+/// Use this class to define a set of related mutexes/locks that will
+/// be tested to verify that the locking is all globally ordered.
+/// Right now you can only use this with the ScopedLock/Unlock classes
+/// as they will properly manipulate the lock ordering when
+/// taking/releasing locks.  Lock ordering levels are defined as
+/// higher is more important, so it is ok to override a lower level
+/// lock with a higher level one, but not in the reverse.
+class PThreadLockOrderingGroup : boost::noncopyable {
+public:
+    PThreadLockOrderingGroup() { 
+	cur_level.reset(new double);
+	*cur_level = 0;
+    }
+
+    double curLevel() const {
+	return *cur_level;
+    }
+private:
+    friend class PThreadScopedLock;
+    friend class PThreadScopedUnlock;
+
+    boost::thread_specific_ptr<double> cur_level;
+
+    double scopeDown(double new_level) {
+	double old_level = *cur_level;
+	INVARIANT(old_level < new_level, 
+		  boost::format("lock scope down failed: %.6g >= %.6g") 
+		  % old_level % new_level);
+	*cur_level = new_level;
+	return old_level;
+    }
+
+    void scopeUp(double down_level, double old_level) {
+	INVARIANT(*cur_level == down_level,
+		  boost::format("lock scope up failed: %.6g != %.6g") 
+		  % *cur_level % down_level);
+	*cur_level = old_level;
+    }
+};
+	
+
 /// Allocate this as an automatic in your stack frame.  It will
 /// lock the mutex on construction and unlock it on destruction,
 /// when the stack frame goes out of scope.
 class PThreadScopedLock : boost::noncopyable {
 public:
-    explicit PThreadScopedLock(PThreadMutex &_lock) 
-	: lock(_lock)
+    explicit PThreadScopedLock(PThreadMutex &_mutex) 
+	: mutex(_mutex), ordering_group(NULL), old_level(0), mutex_level(0)
     {
-	lock.lock();
+	mutex.lock();
+    }
+
+    /// Define this lock as part of an ordered group; it is ok to take
+    /// a lock at a higher level, but not one at a lower level.
+    PThreadScopedLock(PThreadMutex &_mutex, PThreadLockOrderingGroup &group,
+		      double _mutex_level) 
+	: mutex(_mutex), ordering_group(NULL), mutex_level(_mutex_level)
+    {
+	old_level = group.scopeDown(mutex_level);
+	mutex.lock();
+	// Only set this up if we are sure we could scope down; otherwise
+	// if the assertion is mapped to an exception in scopeDown, we 
+	// blow up in the destructor.
+	ordering_group = &group;
     }
 
     ~PThreadScopedLock()
     {
-	lock.unlock();
+	mutex.unlock();
+	if (ordering_group != NULL) {
+	    // If the user mapped the assertion onto an exception, and
+	    // they screwed up multiple things so we are exiting in a
+	    // destructor and this call fails, then we will terminate
+	    // non-gracefully.
+	    ordering_group->scopeUp(mutex_level, old_level);
+	}
     }
 
 private:
-    PThreadMutex &lock;
+    friend class PThreadScopedUnlock;
+    PThreadMutex &mutex;
+    PThreadLockOrderingGroup *ordering_group;
+    double old_level, mutex_level;
+};
+
+/// Allocate this as an automatic in your stack frame, probabably
+/// within a sub-block to temporarily release a scoped lock that you
+/// had been holding.
+class PThreadScopedUnlock : boost::noncopyable {
+public:
+    explicit PThreadScopedUnlock(PThreadScopedLock &_parent)
+	: parent(_parent)
+    { 
+	if (parent.ordering_group != NULL) {
+	    parent.ordering_group
+		->scopeUp(parent.mutex_level, parent.old_level);
+	}
+	parent.mutex.unlock();
+    }
+
+    ~PThreadScopedUnlock() {
+	if (parent.ordering_group != NULL) {
+	    double tmp_old_level 
+		= parent.ordering_group->scopeDown(parent.mutex_level);
+	    SINVARIANT(tmp_old_level == parent.old_level);
+	}
+	parent.mutex.lock();
+    }
+private:
+    PThreadScopedLock &parent;
 };
 
 /// Old name for PThreadScopedLock; it was renamed to match with the
