Many, many, minor changes to get things compiling on native windows. Everything in the Lintel library without a pthread dependancy now builds.
Changes and notes:
   * boost 1.35 is required under windows (Posix systems can survive on
     earlier versions, although when we decide to stop supporting 
     earlier versions, there are code paths in MathSpecialFunctions that
     can be simplified.)
   * Clock.hpp: add windows asm for rdtsc instruction
   * Clock.cpp: #ifdef out posix-only includes
   * ConstantString.hpp: change implicit uint64_t to uint32_t cast to explicit
     static_cast
   * Double.hpp/cpp: add isnan and isinf for windows platforms. Use
     std::numeric_limits<>quiet_NaN() and infinity().
   * Double.cpp: 
   * MersenneTwisterRandom,hpp, HashTable.hpp: use stdint.h instead of 
     inttypes.h
   * MersenneTwisterRandom.cpp: Use windows Crypt* functions to initialize seed
   * MathSpecialFunctions.hpp/cpp: use boost::math::erf if available 
     (boost 1.35 or greater). Note Windows does not have native erf().
   * StatsHistogram.hpp: include values.h on appropriate platforms
   * AssertBoost.cpp: No kill/getpid on windows, use Sleep instead of sleep
   * src/CmakeLists.txt: Separate out core library sources that rely on
     threads, so that they are only built on platforms that support them.
     Currently, only pthreads is supported
   * LintelLog.cpp: include sys/time.h on posix only
   * Stats.cpp: replace sprintf with boost::format
   * StatsHistogram.cpp: use std::numberic_limits values instead of MAXFLOAT.
     replace sprintf with boost::format
   * StatsQuantile.cpp: total_weight type changed to int (from long long).
     Eliminates compiler warning about assigning int64 to int32 (if 
     total_weight really needed to be an int64, then this would have been 
     a bug)
   * StatsSeries.cpp: replace snprintf with boost::format

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,23 +18,29 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
     ADD_DEFINITIONS(-Wall)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
+# these rely on threading support. Currently, Lintel only knows pthreads.
+IF (THREADS_ENABLED)
+    SET (LIBLINTEL_THREAD_SOURCES
+	Clock.cpp
+	LintelLog.cpp
+	SimpleMutex.cpp
+    )
+ENDIF (THREADS_ENABLED)
+
 SET(LIBLINTEL_SOURCES
 	AssertBoost.cpp
 	AssertException.cpp
-	Clock.cpp
 	ConstantString.cpp
 	Deque.cpp
 	Double.cpp
 	HashTable.cpp
 	LeastSquares.cpp
 	LintelAssert.cpp
-	LintelLog.cpp
 	LintelVersion.cpp
 	MathSpecialFunctions.cpp
 	Matrix.cpp
 	MersenneTwisterRandom.cpp
 	PriorityQueue.cpp
-	SimpleMutex.cpp
 	Stats.cpp
 	StatsEMA.cpp
 	StatsHistogram.cpp
@@ -45,6 +51,7 @@ SET(LIBLINTEL_SOURCES
 	StatsSeries.cpp
 	StatsSeriesGroup.cpp
 	StringUtil.cpp
+	${LIBLINTEL_THREAD_SOURCES}
 )
 
 SET(LINTEL_FEATURES boost)
