--- a/src/deptool.in
+++ b/src/deptool.in
@@ -26,6 +26,7 @@ sub usage {
     print "  pull\n";
     print "  build [-t (and test)] [-d (debug build)] [-b (optimize build)]\n";
     print "  commit\n";
+    print "  clear [-b] <project...>\n";
     print "  publish\n";
     confess @_ if @_ > 0;
     exit(0);
@@ -64,6 +65,7 @@ usage("Missing argument") if @ARGV == 0;
 my %commands = ('checkout' => \&depCheckout,
 		'pull' => \&depPull,
 		'build' => \&depBuild,
+		'clear' => \&depClear,
 		'commit' => \&depCommit,
 		'publish' => \&depPublish,
 		# below commands don't run in all dep dirs.
@@ -316,6 +318,37 @@ sub depBuild {
     $options{projects} = projects();
 
     depWalk(sub { depBuildOne(\%options) });
+}
+
+sub depClear {
+    my %options = @_;
+
+    my $projects = projects();
+    $options{dirs} = [];
+    $options{binaries} = 0;
+    my $ret = GetOptions("y!" => \$auto_yes_to_prompts,
+			 "quiet!" => \$quiet,
+			 "b|binaries!" => \$options{binaries});
+    usage("unknown option to clear") unless $ret;
+    my @projects = @ARGV;
+    if ($#projects < 0) {
+	usage("must supply at least one project to clear");
+    }
+    
+    foreach (@projects) {
+	aliasChdir( "$projects/$_");
+	depWalk(sub{ my $wd = aliasGetCwd(); push @{$options{dirs}}, $wd; });
+    }
+
+    if ($options{binaries}) {
+        push @{$options{dirs}}, buildDebug();
+        push @{$options{dirs}}, buildOpt();
+    }
+
+    foreach my $dir (@{$options{dirs}}) {
+	print "rm -rf $dir\n";
+	qx/rm -rf $dir/;
+    }
 }
 
 sub depBuildOne {
