--- a/src/deptool.in
+++ b/src/deptool.in
@@ -26,6 +26,8 @@ use POSIX 'ceil';
 # may have changed.  Test case is revision in tla that switched the
 # dependencies around.
 
+# TODO: builds have to be serialized, but tests should be runnable in parallel.
+
 sub usage {
     print "Usage: $0 <command> [-y (yes to prompts)] [args]\n";
     print "  init [--server=<hostname>] [branch-prefix...]\n";
@@ -680,6 +682,7 @@ sub depCommitDoCommit {
 		if $first_time;
 	    return;
 	}
+	$auto_yes_to_prompts = 0 unless $first_time;
 	$first_time = 0;
 	print "depcommit: you have uncommitted differences in $cwd
 depcommit: will show differences after successful test\n";
