deptool.in: [BUGFIX] Remove the temporary files we created while   doing the repair operation.

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -1195,6 +1195,8 @@ sub codeReviewPatch {
 
 		print "Saving repair difference as $repairpatch\n";
 		eval { runCommand("diff -u $basedir/$to/$file-pre-fix $basedir/$to/$file >$repairpatch"); };
+		unlink("$basedir/$to/$file-pre-fix", "$basedir/$to/$patch",
+		       "$basedir/$to/$file-final-version");
 	    }
 	}
     }
